<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.allmycoins</groupId>
  <artifactId>all-my-coins</artifactId>
  <version>0.1.0</version>

  <properties>
  	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <jackson.version>2.12.0</jackson.version>
      <junit.version>5.7.0</junit.version>
      <main.class>com.allmycoins.Main</main.class>
  </properties>

  <dependencies>        
    <dependency>
  	  <groupId>com.fasterxml.jackson.core</groupId>
	  <artifactId>jackson-databind</artifactId>
  	  <version>${jackson.version}</version>
    </dependency>
    
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-engine</artifactId>
	    <version>${junit.version}</version>
	    <scope>test</scope>
	</dependency>
    
  </dependencies>
  
  <build>
  
    <plugins>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.3.0</version>
         <configuration>
             <descriptorRefs>
                 <descriptorRef>jar-with-dependencies</descriptorRef>
             </descriptorRefs>
             <archive>
            <manifest>
              <mainClass>${main.class}</mainClass>
            </manifest>
          </archive>
         </configuration>
         <executions>
             <execution>
                 <id>make-assembly</id>
                 <phase>package</phase>
                 <goals>
                     <goal>single</goal>
                 </goals>
             </execution>
         </executions>
        </plugin>
        
		<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
        </plugin>
        
    </plugins>
  </build>
</project>